# Rust-sitemap

./: .gitignore  .pypirc.template  CONCURRENCY_ARCHITECTURE.md  Cargo.toml  NEW_OPTIMIZATIONS.md  OPTIMIZATIONS.md  OPTIMIZATION_CHANGES.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  RATE_LIMITING_IMPROVEMENTS.md  README.md  build.rs  pyproject.toml  stress_test_realworld.sh
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
benches/: metrics_bench.rs  state_bench.rs
data/: crawler_state.redb
data/nodemap_dedup/: db
python/rustmapper/: README.md  __init__.py
python/rustmapper 2/: __init__.py
src/: backoff.rs  bfs_crawler.rs  cli.rs  common_crawl_seeder.rs  completion_detector.rs  config.rs  ct_log_seeder.rs  domain_profiler.rs  export.rs  frontier.rs  json_utils.rs  lib.rs  logging.rs  main.rs  metadata.rs  metrics.rs  models.rs  network.rs  node_map.rs  parser.rs  privacy_metadata.rs  reorientation.rs  rkyv_queue.rs  robots.rs  seeder.rs  sitemap_seeder.rs  sitemap_writer.rs  smart_connection_pool.rs  state.rs  tech_classifier.rs  url_lock_manager.rs  url_utils.rs  wal.rs  work_stealing.rs  writer_thread.rs
src/orchestration/: builder.rs  config.rs  distributed.rs  export.rs  frontier_setup.rs  governor.rs  mod.rs  persistence.rs  shard_workers.rs  shutdown.rs
src/parsing_modules/: mod.rs  nextjs_parser.rs  shopify_parser.rs
tests/: integration_tests.rs
