[package]
name = "rust_sitemap"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_sitemap"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 2

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rkyv = { version = "0.7", features = ["validation"] }
rkyv_derive = "0.7"
redb = "2.1"
reqwest = { version = "0.12", features = ["stream", "gzip", "json"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
lol_html = "1.2"
encoding_rs = "0.8"
thiserror = "1.0"
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
regex = "1.0"
flate2 = "1.0"
dashmap = "5.5"
parking_lot = "0.12"
kanal = "0.1.0-pre8"
bloomfilter = "1.0"
crossbeam = "0.8"
atomic_float = "1.1"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
robotstxt = "0.3"
sitemap = "0.4"
chrono = "0.4"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
async-trait = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
assert_fs = "1.0"
mockito = "1.0"
wiremock = "0.5"