[package]
name = "rust_sitemap"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_sitemap"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 2

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rkyv = { version = "0.7", features = ["validation"] }
rkyv_derive = "0.7"
redb = "2.1"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
lol_html = "1.2"
thiserror = "1.0"
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
dashmap = "5.5"
parking_lot = "0.12"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
robotstxt = "0.3"
sitemap = "0.4"
chrono = "0.4"
async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli", "deflate"] }
async-trait = "0.1"
flume = "0.11"
crc32fast = "1.3"
fastbloom = "0.7"
tokio-stream = "0.1"
num_cpus = "1.16"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
assert_fs = "1.0"
mockito = "1.0"
wiremock = "0.5"