[package]
name = "rust_sitemap"
version = "0.1.3"
edition = "2024"

[lib]
name = "rustmapper"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rust_sitemap"
path = "src/main.rs"

[features]
default = []
# Enable experimental HTTP/3 support (requires RUSTFLAGS='--cfg reqwest_unstable')
http3 = ["reqwest/http3"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 2

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rkyv = { version = "0.7", features = ["validation"] }
rkyv_derive = "0.7"
redb = "2.1"
reqwest = { version = "0.12", features = ["stream", "json", "hickory-dns"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
scraper = "0.20"
html5ever = "0.27"
readability = "0.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "ansi"] }
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-log = "0.2"
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
dashmap = "5.5"
parking_lot = "0.12"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
robotstxt = "0.3"
sitemap = "0.4"
chrono = "0.4"
async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli", "deflate", "zstd"] }
async-trait = "0.1"
async-stream = "0.3"
flume = "0.11"
crc32fast = "1.3"
fastbloom = "0.7"
tokio-stream = "0.1"
num_cpus = "1.16"
psl = "2.1"
crossbeam-queue = "0.3"
rand = "0.8"
pyo3 = { version = "0.22", features = ["auto-initialize"] }
bincode = "1.3"
flate2 = "1.0"
lru = "0.12"
regex = "1.12.2"
lazy_static = "1.4"
smallvec = "1.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
assert_fs = "1.0"
mockito = "1.0"
wiremock = "0.5"
